# langchain_prac

./: .gitIgnore  README.md  lib.py  pyproject.toml
module1/: first.ipynb  second.ipynb
module2/: chat.txt  practice-chat-summarization.ipynb  validator.ipynb
module3/: complete.ipynb  get-values.ipynb  human-in-loop.ipynb  human_reviewer.ipynb  stream.ipynb
